Fix overflow issue for mobile nav

--- a/main.css
+++ b/main.css
@@ -447,6 +447,10 @@ button {
   display: none;
 }
 
+.--overflow {
+  overflow: hidden;
+}
+
 /* ===============
    SALIENT FEATURES
    =============== */
